# pbfhogg

./: .gitattributes  .gitignore  .review.md  .review.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CORRECTNESS.md  Cargo.toml  DEVIATIONS.md  LIBRARY.md  LICENSE-MIT  PLAN.md  README.md  REVERSE_GEOCODING.md  REVERSE_GEOCODING_SPEC.md  TODO.md  benchmarks-self-write.tsv  benchmarks-self.tsv  benchmarks.tsv  brokkr.toml  build.rs  dev.toml  package.json  pnpm-lock.yaml
.brokkr/: results.db
.cargo/: config.toml
.github/workflows/: deploy.yml  docs.yml
bench/osmpbf-baseline/: Cargo.toml
bench/planetiler-baseline/: BenchPbfRead.java
benchmarks/: benchmarks-commands.tsv  benchmarks-self-write.tsv  benchmarks-self.tsv  benchmarks.tsv
cli/: Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli.rs
decisions/: 0001-organize-bug-sweep-by-policy-cluster.md  0001-recluster-0.3.0-sweep-by-policy-question.md  0002-negative-ids-rejected-project-wide.md  0003-error-path-hygiene-via-pathguard.md  0004-defensive-input-errors-and-fixtures.md  0005-latent-invariant-debug-asserts.md  0006-blob-count-threshold-dispatch.md  0007-injected-prepass-wire-extensions.md  0009-fused-command-transforms.md  0010-geojson-export-format-and-area-heuristic.md  README.md
dev/: Cargo.toml
dev/src/: bench_all.rs  bench_allocator.rs  bench_blob_filter.rs  bench_commands.rs  bench_extract.rs  bench_merge.rs  bench_planetiler.rs  bench_read.rs  bench_write.rs  build.rs  config.rs  db.rs  download.rs  env.rs  error.rs  git.rs  harness.rs  hotpath.rs  lockfile.rs  main.rs  output.rs  preflight.rs  profile.rs  tools.rs  verify.rs  verify_add_locations.rs  verify_all.rs  verify_cat.rs  verify_check_refs.rs  verify_derive_changes.rs  verify_diff.rs  verify_extract.rs  verify_getid_removeid.rs  verify_merge.rs  verify_sort.rs  verify_tags_filter.rs
docs/: index.md
docs/.vitepress/: config.ts
docs/api/: config.md  index.md  pipeline.md  tile.md
docs/cli/: commands.md  deviations.md  index.md  osmium-parity.md
docs/guide/: advanced.md  configuration.md  correctness.md  index.md  indexdata.md  install.md  performance.md  reading.md  usage.md  writing.md
examples/: bench_merge.rs  bench_read.rs  bench_write.rs  gen_test_pbf.rs  partition_stats.rs
notes/: SIMD.md  TAG_INDEX_PBFHOGG.md  add-locations-to-ways-dense-index-safety-investigation-2026-03-03.md  add-locations-to-ways-optimization.md  altw-as-renumber.md  altw-coord-payloads-integration-stages.md  altw-external-optimization-plan.md  altw-external.md  altw-memory.md  altw-optimization-history.md  altw-partitioned.md  altw-structural-reports.md  altw.md  apply-changes-opportunities.md  arena-allocator-research.md  blob-count-dispatch.md  block-pair-merge-join-plan.md  blockbuilder-iterator-api.md  business-logic-consolidation-deep-dive-2026-03-03.md  check-refs-opportunities.md  cli-redesign.md  cli-reference.md  columnar-integration.md  consolidation-analysis-2026-03-07.md  consolidation-review-1-rewrite-engine.md  consolidation-review-2-element-emitter.md  consolidation-review-3-blob-pipeline.md  consolidation-review-4-merge-join.md  consolidation-review-5-dependency-closure.md  consolidation-review-6-io-mode-options.md  cross-pipeline-optimization-plan.md  degrade.md  derive-changes-diff-streaming-merge-join.md  diff-snapshots-opportunities.md  drop-ids-spec.md  env-gated-readpath-batch.md  external-join-oom-investigation.md  extract-parallel-collection.md  extract-passthrough-findings.md  extract-raw-passthrough-spec.md  (+78 more)
notes/memory/: experiment-matrix.md  measurement-gaps.md  p1-compact-diff-model.md  p2-byte-budgeted-batching.md  p3-streaming-rewrite.md  p4-bounded-buffer-pool.md  p5-remove-upsert-copies.md  p6-vectored-writer-framing.md  pipeline.md  research-conclusions.md
notes/perf-review/: box1-read-orchestration.md  box2-blob-decode.md  box3-wire-parsing.md  (+7 more)
protohoggr/: Cargo.toml
raw/: elivagar-README.md  nidhogg-README.md  pbfhogg-README.md  test-readme.md
reference/: blob-density.md  cli-reference.md  orchestrate.md  osmium-parity.md  performance-history.md  performance.md  pipeline.md  pipelined-reader-paths.md  technical-implementation-spec.md  testing.md  truncation-handling.md
scripts/: bench-allocator.sh  bench-blob-filter.sh  bench-commands.sh  bench-extract-japan.sh  bench-merge-uring.sh  bench-merge.sh  bench-planetiler.sh  bench-self-write.sh  bench-self.sh  bench-uring.sh  bench.sh  build-hotpath.sh  build.sh  clippy.sh  codex-implement.py  codex-review.py  codex_common.py  download-regions.sh  envrun.sh  lib.sh  profile-region.sh  run-hotpath-alloc.sh  run-hotpath-germany.sh  run-hotpath.sh  run.sh  test.sh  xval-merge.sh
src/: blob.rs  blob_index.rs  block.rs  block_builder.rs  cat.rs  check_refs.rs  coord_fmt.rs  debug.rs  dense.rs  derive_changes.rs  elements.rs  error.rs  extract.rs  fileinfo.rs  geo.rs  getid.rs  idset.rs  indexed.rs  lib.rs  main.rs  merge.rs  mmap_blob.rs  osc.rs  osm_id.rs  owned.rs  path_guard.rs  pipeline.rs  reader.rs  reorder_buffer.rs  sort.rs  tag_expr.rs  tags_count.rs  tags_filter.rs  writer.rs
tests/: add_locations_to_ways.rs  apply_changes_invariants.rs  cat.rs  check.rs  cli_add_locations_to_ways.rs  cli_apply_changes.rs  cli_apply_changes_invariants.rs  cli_batched_gate.rs  cli_cat.rs  cli_defensive_input.rs  cli_degrade.rs  cli_derive_changes.rs  cli_diff.rs  cli_export.rs  cli_extract.rs  cli_fused_gate.rs  cli_inject_prepass.rs  cli_merge_changes.rs  cli_negative_id_invariants.rs  cli_negative_ids.rs  cli_repack.rs  cli_sort.rs  cli_tags_filter.rs  cli_time_filter.rs  cli_truncation_sweep.rs  cluster2_defensive_input.rs  corrupt_input.rs  derive_changes.rs  diff.rs  edge_cases.rs  extract.rs  fault_altw_stage3.rs  fault_apply_changes.rs  fault_batched_panic.rs  fault_batched_stall.rs  fault_derive_parallel.rs  fault_diff_parallel.rs  fault_extract_grid.rs  fault_geocode_pass3.rs  fault_injection.rs  (+25 more)
verify/: add-locations-to-ways.sh  cat.sh  check-refs.sh  derive-changes.sh  diff.sh  extract.sh  getid-removeid.sh  lib.sh  merge.sh  sort.sh  tags-filter.sh
(+197 files in other folders)
