[package]
name = "pbfhogg"
version = "0.2.0"
description = "Fast OpenStreetMap PBF reader and writer for Rust. Read, write, and merge .osm.pbf files with pipelined parallel decoding."
license = "Apache-2.0"
edition = "2024"
repository = "https://github.com/folknor/pbfhogg"
keywords = ["osm", "openstreetmap", "pbf", "protobuf", "gis"]
categories = ["parser-implementations", "encoding", "science::geo"]

[features]
default = ["rust-zlib"]
rust-zlib = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
jemalloc = ["dep:tikv-jemallocator"]
mimalloc = ["dep:mimalloc-crate"]
linux-direct-io = ["dep:libc"]

[dependencies]
tikv-jemallocator = { version = "0.6", optional = true }
mimalloc-crate = { package = "mimalloc", version = "0.1", optional = true }
bytes = "1"
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1.0", default-features = false }
memmap2 = "0.9"
protobuf = { version = "3.7", features = ["with-bytes"] }
quick-xml = "0.39"
rayon = "1.5"
roaring = "0.11"
rustc-hash = "2"
serde_json = "1"
zstd = "0.13"
hotpath = "0.12"
libc = { version = "0.2", optional = true }

[build-dependencies]
protobuf-codegen = "3.7"

[dev-dependencies]
tempfile = "3"

[lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"
