[workspace]
members = ["cli"]
exclude = ["bench/osmpbf-baseline"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/folknor/pbfhogg"

[workspace.lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"

[package]
name = "pbfhogg"
version.workspace = true
description = "Fast OpenStreetMap PBF reader and writer for Rust. Read, write, and merge .osm.pbf files with pipelined parallel decoding."
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords = ["osm", "openstreetmap", "pbf", "protobuf", "gis"]
categories = ["parser-implementations", "encoding", "science::geo"]

[features]
default = ["rust-zlib", "commands"]
rust-zlib = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]
commands = ["dep:serde_json", "dep:roaring"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
libdeflater = ["dep:libdeflater"]
linux-direct-io = ["dep:libc"]
linux-io-uring = ["dep:io-uring", "dep:libc"]

[dependencies]
protohoggr = { path = "../protohoggr" }
bytes = "1"
flate2 = { version = "1.0", default-features = false }
memmap2 = "0.9"
rayon = "1.5"
rustc-hash = "2"
zstd = "0.13"
hotpath = "0.13"
quick-xml = "0.39"
serde_json = { version = "1", optional = true }
roaring = { version = "0.11", optional = true }
io-uring = { version = "0.7", optional = true }
libc = { version = "0.2", optional = true }
libdeflater = { version = "1.25", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lints]
workspace = true
