[workspace]
members = ["cli"]
exclude = ["bench/osmpbf-baseline"]
dependencies = {}

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["folknor <folk@folk.wtf>"]
repository = "https://github.com/folknor/pbfhogg"

[workspace.lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"

[package]
name = "pbfhogg"
version.workspace = true
authors.workspace = true
description = "Fast OpenStreetMap PBF reader and writer for Rust. Read, write, and merge .osm.pbf files with pipelined parallel decoding."
license.workspace = true
edition.workspace = true
repository.workspace = true
readme = "LIBRARY.md"
rust-version = "1.96"
keywords = ["osm", "openstreetmap", "pbf", "protobuf", "gis"]
categories = ["parser-implementations", "encoding", "science::geo"]

[features]
default = ["commands"]
geocode-reader = ["dep:s2"]
commands = ["dep:serde_json", "geocode-reader"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
linux-direct-io = []
linux-io-uring = ["dep:io-uring"]
# Test-only fault-injection hooks for the parallel pipelines (worker
# panic / IO error at a named blob seq). Release builds never enable
# this; the hook fields and checks compile out entirely. Turned on by
# `brokkr check` via `--all-features`.
test-hooks = []

[dependencies]
protohoggr = "0.4.0"
bytes = "1.12.1"
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
memmap2 = "0.9.11"
rayon = "1.12.0"
rustc-hash = "2.1.3"
zstd = "0.13"
hotpath = "0.21.2"
quick-xml = "0.41.0"
serde_json = { version = "1.0.150", optional = true }
s2 = { version = "0.1.0", default-features = false, features = ["float_extras"], optional = true }
io-uring = { version = "0.7.13", optional = true }
libc = "0.2.186"


[dev-dependencies]
tempfile = "3.27.0"
proptest = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[lints]
workspace = true
