[package]
name = "pbfhogg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line OpenStreetMap PBF toolkit"
readme = "README.md"
rust-version = "1.87"
authors = ["folknor <folk@folk.wtf>"]
keywords = ["osm", "openstreetmap", "pbf", "cli", "gis"]
categories = ["command-line-utilities", "science::geo"]

[[bin]]
name = "pbfhogg"
path = "src/main.rs"

[features]
default = []
hotpath = ["pbfhogg/hotpath"]
hotpath-alloc = ["pbfhogg/hotpath-alloc"]
linux-direct-io = ["pbfhogg/linux-direct-io"]
linux-io-uring = ["pbfhogg/linux-io-uring"]

[dependencies]
pbfhogg = { version = "0.2", path = "..", default-features = false, features = ["commands"] }
clap = { version = "4.6.0", features = ["derive"] }
serde_json = "1"
hotpath = "0.14"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
