[package]
name = "pbfhogg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line OpenStreetMap PBF toolkit"
readme = "README.md"
rust-version = "1.87"
authors = ["folknor <folk@folk.wtf>"]
keywords = ["osm", "openstreetmap", "pbf", "cli", "gis"]
categories = ["command-line-utilities", "science::geo"]

[[bin]]
name = "pbfhogg"
path = "src/main.rs"

[features]
default = []
# No-op passthrough. pbfhogg-cli's lib dep always pulls in
# `pbfhogg/commands`, so this feature does nothing semantic; it
# exists so brokkr.toml `[[check]]` sweeps can apply the same
# `--features commands` flag to both `cargo test -p pbfhogg` and
# `cargo build -p pbfhogg-cli` without the latter rejecting the
# unknown feature.
commands = []
hotpath = ["pbfhogg/hotpath"]
hotpath-alloc = ["pbfhogg/hotpath-alloc"]
linux-direct-io = ["pbfhogg/linux-direct-io"]
linux-io-uring = ["pbfhogg/linux-io-uring"]
# Re-exports pbfhogg's test-only fault-injection hooks so the CLI
# compiles cleanly under `cargo ... --all-features`. Production
# builds don't enable this.
test-hooks = ["pbfhogg/test-hooks"]

[dependencies]
pbfhogg = { version = "0.2", path = "..", default-features = false, features = ["commands"] }
clap = { version = "4.6.1", features = ["derive"] }
serde_json = "1"
hotpath = "0.15"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
