[package]
name = "pbfhogg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line OpenStreetMap PBF toolkit"
readme = "README.md"
rust-version = "1.96"
authors = ["folknor <folk@folk.wtf>"]
keywords = ["osm", "openstreetmap", "pbf", "cli", "gis"]
categories = ["command-line-utilities", "science::geo"]

[[bin]]
name = "pbfhogg"
path = "src/main.rs"

[features]
default = []
# No-op passthrough. pbfhogg-cli's lib dep always pulls in
# `pbfhogg/commands`, so this feature does nothing semantic; it
# exists so brokkr.toml `[[check]]` sweeps can apply the same
# `--features commands` flag to both `cargo test -p pbfhogg` and
# `cargo build -p pbfhogg-cli` without the latter rejecting the
# unknown feature.
commands = []
hotpath = ["pbfhogg/hotpath"]
hotpath-alloc = ["pbfhogg/hotpath-alloc"]
linux-direct-io = ["pbfhogg/linux-direct-io"]
linux-io-uring = ["pbfhogg/linux-io-uring"]
# Re-exports pbfhogg's test-only fault-injection hooks so the CLI
# compiles cleanly under `cargo ... --all-features`. Production
# builds don't enable this.
test-hooks = ["pbfhogg/test-hooks"]

[dependencies]
pbfhogg = { version = "0.5", path = "..", default-features = false, features = ["commands"] }
clap = { version = "4.6.1", features = ["derive"] }
# float_roundtrip must match the library's serde_json (see root Cargo.toml):
# correctly-rounded float parsing keeps config/GeoJSON coordinates identical
# to their CLI-string-parsed equivalents. Feature unification would apply it
# anyway when both crates build together; stating it here makes the
# guarantee explicit rather than an artifact of the build graph.
# float_roundtrip must match the library's serde_json (see root Cargo.toml):
# correctly-rounded float parsing keeps config/GeoJSON coordinates identical
# to their CLI-string-parsed equivalents. Feature unification would apply it
# anyway when both crates build together; stating it here makes the
# guarantee explicit rather than an artifact of the build graph.
serde_json = { version = "1.0.150", features = ["float_roundtrip"] }
hotpath = "0.21.2"

[dev-dependencies]
tempfile = "3.27.0"

[lints]
workspace = true
