[package]
name = "pbfhogg-dev"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Development tooling for pbfhogg"

[[bin]]
name = "dev"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }

pbfhogg = { path = "..", default-features = false, features = [
    "zlib-ng",
    "commands",
    "linux-io-uring",
    "linux-direct-io",
    "libdeflater",
] }

[lints]
workspace = true
